--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ p {
     width: 105%;
     min-height: 900px;
     margin-left: -13px;
-    background-image: url(img/hero-background.png);
+    background-image: url(../img/hero-background.png);
     background-repeat: no-repeat;
     background-size: 100%;
     animation: swim 8s infinite;
@@ -580,7 +580,7 @@ h2 {
 .application__item-1::before {
     left: 105px;
     top: 10px;
-    background-image: url(img/in-round-pic-1.png);
+    background-image: url(../img/in-round-pic-1.png);
     background-repeat: no-repeat;
     background-size: 124px;
     background-position: center;
@@ -591,7 +591,7 @@ h2 {
 .application__item-2::before {
     right: 0;
     top: 35px;
-    background-image: url(img/psevdo-line-1.png);
+    background-image: url(../img/psevdo-line-1.png);
     background-repeat: no-repeat;
     background-size: 150px;
     background-position: center;
@@ -604,7 +604,7 @@ h2 {
     top: 0;
     content: "";
     position: absolute;
-    background-image: url(img/psevdo-line-2.png);
+    background-image: url(../img/psevdo-line-2.png);
     background-repeat: no-repeat;
     background-size: 150px;
     background-position: center;
@@ -614,7 +614,7 @@ h2 {
 .application__item-3::before {
     left: 45px;
     top: -20px;
-    background-image: url(img/big-round.png);
+    background-image: url(../img/big-round.png);
     background-repeat: no-repeat;
     background-size: 48px;
     background-position: center;
@@ -628,7 +628,7 @@ h2 {
     height: 10px;
     content: "";
     position: absolute;
-    background-image: url(img/small-round.png);
+    background-image: url(../img/small-round.png);
     background-repeat: no-repeat;
     background-size: 10px;
     animation: round 6s infinite;
@@ -643,7 +643,7 @@ h2 {
     position: absolute;
     background: #590D56;
     border-radius: 100%;
-    background-image: url(img/left-half-round.png);
+    background-image: url(../img/left-half-round.png);
     background-repeat: no-repeat;
     background-position-x: -10px;
 }
@@ -655,7 +655,7 @@ h2 {
     bottom: -20px;
     content: "";
     position: absolute;
-    background-image: url(img/right-half-round.png);
+    background-image: url(../img/right-half-round.png);
     background-repeat: no-repeat;
     background-position: right;
     animation: round 6s infinite;
@@ -664,7 +664,7 @@ h2 {
 .application__item-5::before {
     left: 120px;
     bottom: -10px;
-    background-image: url(img/left-psevdo-arrow.png);
+    background-image: url(../img/left-psevdo-arrow.png);
     background-repeat: no-repeat;
     background-position: -2px 28px;
 }
@@ -676,7 +676,7 @@ h2 {
     bottom: -10px;
     content: "";
     position: absolute;
-    background-image: url(img/right-psevdo-arrow.png);
+    background-image: url(../img/right-psevdo-arrow.png);
     background-repeat: no-repeat;
     background-position: 57px 31px;
     animation: round 6s infinite;
@@ -692,7 +692,7 @@ h2 {
     width: 100%;
     min-height: 858px;
     padding-top: 300px;
-    background-image: url(img/background-2.png);
+    background-image: url(../img/background-2.png);
 }
 
 .production__main-block {
@@ -855,7 +855,7 @@ h2 {
     width: 100%;
     min-height: 857px;
     padding-top: 236px;
-    background-image: url(img/useful-info-background.png);
+    background-image: url(../img/useful-info-background.png);
     background-repeat: no-repeat;
 }
 
@@ -886,7 +886,7 @@ h2 {
     width: 263px;
     min-height: 457px;
     margin-right: 30px;
-    background-image: url(img/big-pic.jpg);
+    background-image: url(../img/big-pic.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
 }
@@ -896,7 +896,7 @@ h2 {
     min-height: 457px;
     padding-top: 29px;
     padding: 29px 17px 147px 28px;
-    background-image: url(img/darkness.png);
+    background-image: url(../img/darkness.png);
     z-index: 2;
 }
 
@@ -920,7 +920,7 @@ h2 {
 }
 
 .div-1 {
-    background-image: url(img/div-1.jpg);
+    background-image: url(../img/div-1.jpg);
     background-size: 100%;
 }
 
@@ -935,7 +935,7 @@ h2 {
 }
 
 .div-2 {
-    background-image: url(img/div-2.jpg);
+    background-image: url(../img/div-2.jpg);
 }
 
 .useful-info__bottom-pic {
@@ -946,7 +946,7 @@ h2 {
     font-size: 36px;
     line-height: 36px;
     color: #FFFFFF;
-    background-image: url(img/purple-background.jpg);
+    background-image: url(../img/purple-background.jpg);
 }
 
 .div-1__darkness,
@@ -961,12 +961,12 @@ h2 {
 
 .div-1__darkness {
     padding: 24px 24px 20px 21px;
-    background-image: url(img/div-1-darkness.png);
+    background-image: url(../img/div-1-darkness.png);
 }
 
 .div-2__darkness {
     padding: 24px 17px 20px 28px;
-    background-image: url(img/div-2-darkness.png);
+    background-image: url(../img/div-2-darkness.png);
 }
 
 .useful-info__btn {
@@ -1243,6 +1243,7 @@ h2 {
     .hero__background {
         margin-left: -30px;
         background-size: 110%;
+        overflow: hidden;
     }
 
 
@@ -1364,6 +1365,12 @@ h2 {
         margin: auto;
     }
 
+    .hero {
+        overflow: hidden;
+    }
+
+  
+
     .header__logo-big {
         display: none;
     }
@@ -1409,7 +1416,8 @@ h2 {
     .hero__background {
         width: 110%;
         margin-left: -35px;
-        background-size: 115%;
+        background-size: 100%;
+        overflow: hidden;
     }
 
     .hero__list {
@@ -1761,7 +1769,8 @@ h2 {
         margin-left: -60px;
         background-size: 130%;
         margin-top: 100px;
-        background-image: url(img/hero-background-2.png);
+        background-image: url(../img/hero-background-2.png);
+        overflow: hidden;
     }
 
     .hero__left-block {
@@ -1804,6 +1813,7 @@ h2 {
     .hero {
         min-height: 600px;
         padding-bottom: 30px;
+        overflow: hidden;
     }
 
 
